--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,7 +9,7 @@ phases:
     commands:
       - echo "Building Vue.js project..."
       - npm run build
-      - aws s3 sync dist/ s3://codepipeline-us-east-2-702087852916
+      - aws s3 cp dist/ s3://codepipeline-us-east-2-702087852916
 artifacts:
   files:
     - '**/*'
